# engine

./: CMakeLists.txt  Makefile  main.cpp
assets/shader/: fragment.glsl  vertex.glsl
assets/shader/color/: fragment.glsl  vertex.glsl
assets/shader/engine2d/: vertex.glsl
assets/shader/texture/: fragment.glsl  vertex.glsl
assets/shaders/: solid_fs.glsl
include/: engine2d.hpp
include/render/: buffer.hpp  bufferlayout.hpp  camera.hpp  render.hpp  shader.hpp  texture.hpp  vertexarray.hpp  window.hpp
include/shapes/: cuboid.hpp  rect.hpp
include/utils/: log.hpp  profile.hpp
src/: engine2d.cpp  main.c
src/gfx/: buffer.c  buffer.h  shader.c  shader.h  window.c  window.h
src/render/: buffer.cpp  bufferlayout.cpp  camera.cpp  shader.cpp  texture.cpp  vertexarray.cpp  window.cpp
src/shapes/: cuboid.cpp  rect.cpp
src/utils/: log.cpp  profile.cpp
